--- a/stm/app_mcu_h5/CMakeLists.txt
+++ b/stm/app_mcu_h5/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.22)
-project(stm32h573zi C)
 
-option(USE_IIO "Compile IIO board_support sources" OFF)
+project(app_mcu_h5 C)
+
+option(SUPPRESS_MSDK_WARNINGS "Suppress warnings for Driver sources" ON)
 option(USE_HW_CRC "Compile IIO board_support sources" OFF)
-add_library(stm32h573zi INTERFACE)
+add_library(app_mcu_h5 INTERFACE)
 
 # Enable CMake support for ASM and C languages
 enable_language(C ASM)
@@ -11,13 +12,14 @@ enable_language(C ASM)
 set(STM32H573_ROOT_DIR ${CMAKE_CURRENT_LIST_DIR})
 
 # Base directory for HAL Drivers
-set(STM32H5_HAL_DRIVERS C:/STM32Cube/Repository/STM32Cube_FW_H5_V1.3.0/Drivers/STM32H5xx_HAL_Driver CACHE
+set(SDK C:/STM32Cube/Repository/STM32Cube_FW_H5_V1.3.0/Drivers/STM32H5xx_HAL_Driver CACHE
     PATH "Path to STM32CubeH5 directory")
 
 # Add project symbols (macros)
 target_compile_definitions(${CMAKE_PROJECT_NAME} PUBLIC
     $<$<CONFIG:Debug>:DEBUG>
     # Add user defined symbols
+    STM32H573xx
     STM32H573ZI
 )
 
@@ -27,12 +29,15 @@ include(CMakePrintHelpers)
 set(BOARD_SRC ${STM32H573_ROOT_DIR}/source/app_mcu_h5.c
 				${STM32H573_ROOT_DIR}/source/app_mcu_h5_control.c
 				${STM32H573_ROOT_DIR}/source/app_mcu_h5_gpio.c
+                ${STM32H573_ROOT_DIR}/source/app_mcu_h5_spi.c
+                ${STM32H573_ROOT_DIR}/../source/stm_spi.c
                 ${STM32H573_ROOT_DIR}/../source/stm_uart.c
                 ${STM32H573_ROOT_DIR}/../source/stm_i2c.c
                 ${STM32H573_ROOT_DIR}/../source/stm_timer.c
                 ${STM32H573_ROOT_DIR}/../source/stm32h563x_timer_config.c
                 ${STM32H573_ROOT_DIR}/../source/stm32h563x_uart_config.c
                 ${STM32H573_ROOT_DIR}/../source/stm32h563x_i2c_config.c
+                ${STM32H573_ROOT_DIR}/../source/stm32h563xx_spi_config.c
 
 )
 if(USE_CRC AND USE_HW_CRC)
@@ -41,9 +46,6 @@ else()
 set(CRC_SRC "")
 endif()
 
-set(IIO_SRC ${STM32H573_ROOT_DIR}/source/app_mcu_h5_spi.c
-            ${STM32H573_ROOT_DIR}/../source/stm_spi.c
-            ${STM32H573_ROOT_DIR}/../source/stm32h563xx_spi_config.c)
 
 set(STM_GEN_CODE_SRC ${STM32H573_ROOT_DIR}/stm_gen_code/stm32h5xx_hal_msp.c
                      ${STM32H573_ROOT_DIR}/stm_gen_code/stm32h5xx_it.c
@@ -54,54 +56,70 @@ set(STM_GEN_CODE_SRC ${STM32H573_ROOT_DIR}/stm_gen_code/stm32h5xx_hal_msp.c
 )
 
 set(STM32_HAL_FILES    # HAL driver sources
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_cortex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_crc.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_crc_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_icache.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_rcc.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_rcc_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_flash.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_flash_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_gpio.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_irda.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_dma.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_dma_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_pwr.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_pwr_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_exti.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_spi.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_spi_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_tim.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_tim_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_uart.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_uart_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_i2c.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_i2c_ex.c
-    ${STM32H5_HAL_DRIVERS}/Src/stm32h5xx_hal_lptim.c
+    ${SDK}/Src/stm32h5xx_hal_cortex.c
+    ${SDK}/Src/stm32h5xx_hal_crc.c
+    ${SDK}/Src/stm32h5xx_hal_crc_ex.c
+    ${SDK}/Src/stm32h5xx_hal_icache.c
+    ${SDK}/Src/stm32h5xx_hal_rcc.c
+    ${SDK}/Src/stm32h5xx_hal_rcc_ex.c
+    ${SDK}/Src/stm32h5xx_hal_flash.c
+    ${SDK}/Src/stm32h5xx_hal_flash_ex.c
+    ${SDK}/Src/stm32h5xx_hal_gpio.c
+    ${SDK}/Src/stm32h5xx_hal_irda.c
+    ${SDK}/Src/stm32h5xx_hal_dma.c
+    ${SDK}/Src/stm32h5xx_hal_dma_ex.c
+    ${SDK}/Src/stm32h5xx_hal_pwr.c
+    ${SDK}/Src/stm32h5xx_hal_pwr_ex.c
+    ${SDK}/Src/stm32h5xx_hal.c
+    ${SDK}/Src/stm32h5xx_hal_exti.c
+    ${SDK}/Src/stm32h5xx_hal_spi.c
+    ${SDK}/Src/stm32h5xx_hal_spi_ex.c
+    ${SDK}/Src/stm32h5xx_hal_tim.c
+    ${SDK}/Src/stm32h5xx_hal_tim_ex.c
+    ${SDK}/Src/stm32h5xx_hal_uart.c
+    ${SDK}/Src/stm32h5xx_hal_uart_ex.c
+    ${SDK}/Src/stm32h5xx_hal_i2c.c
+    ${SDK}/Src/stm32h5xx_hal_i2c_ex.c
+    ${SDK}/Src/stm32h5xx_hal_lptim.c
 )
 
-target_sources(stm32h573zi INTERFACE
-    ${STM_GEN_CODE_SRC}
-    ${STM32_HAL_FILES}
-    ${BOARD_SRC}
-    ${IIO_SRC}
-    ${CRC_SRC}
-)
+# Create a library for STMCubeH5 HAL files and suppress warnings
+add_library(hal_drivers INTERFACE)
+target_sources(hal_drivers INTERFACE ${STM32_HAL_FILES})
 
-target_include_directories(stm32h573zi INTERFACE
+if (SUPPRESS_MSDK_WARNINGS)
+    # Suppress warnings for STMCubeH5 HAL files
+    target_compile_options(hal_drivers INTERFACE -w)
+endif()
+
+# Create a library for your board source files (warnings enabled)
+add_library(board_src INTERFACE)
+target_sources(board_src INTERFACE ${BOARD_SRC} ${STM_GEN_CODE_SRC} ${CRC_SRC})
+
+target_include_directories(app_mcu_h5 INTERFACE
     ${STM32H573_ROOT_DIR}/include
     ${STM32H573_ROOT_DIR}/../include
     ${STM32H573_ROOT_DIR}/stm_gen_code
     ${STM32H573_ROOT_DIR}/include/config
-    ${STM32H5_HAL_DRIVERS}/Inc
-    ${STM32H5_HAL_DRIVERS}/Inc/Legacy
-    ${STM32H5_HAL_DRIVERS}/../CMSIS/Device/ST/STM32H5xx/Include
-    ${STM32H5_HAL_DRIVERS}/../CMSIS/Include
+    ${SDK}/Inc
+    ${SDK}/Inc/Legacy
+    ${SDK}/../CMSIS/Device/ST/STM32H5xx/Include
+    ${SDK}/../CMSIS/Include
 )
 
-target_link_directories(stm32h573zi INTERFACE
+target_link_directories(app_mcu_h5 INTERFACE
 )
 
-target_link_libraries(stm32h573zi INTERFACE
+# Add project symbols (macros)
+target_compile_definitions(board_src INTERFACE
+    USE_HAL_DRIVER
+    STM32H573xx
+    $<$<CONFIG:Debug>:DEBUG>
+    # Add user defined symbols
+    STM32H573ZI
+    _USE_STD_INT_TYPES
+	EVB
 )
+
+# Main target
+target_link_libraries(app_mcu_h5 INTERFACE hal_drivers board_src)
